brat/test/golden/error/odd-length.brat.golden
Error in test/golden/error/odd-length.brat@FC {start = Pos {line = 5, col = 15}, end = Pos {line = 5, col = 30}}:
g = f(Nat, 4, [1] =, 2 ,= [3])
              ^^^^^^^^^^^^^^^

  Expected vector of length 4
from the type:  Vec(VApp VPar In checking_check_defs_1_g_1_ 0 B0, VPar In checking_check_defs_1_g_1_ 1)
but got vector: concatEqOdd([1], 2, [3])
of odd length


